# work-tracking-manager

./: Cargo.toml  LICENSE  README.md
src/: main.rs  tracking_day.rs  tracking_record.rs  work_duration.rs
