[package]
name = "work-tracking-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
chrono = { version = "0.4.33", features = ["unstable-locales"] }
tzfile = "0.1.3"
clap = { version = "4.5.0", features = ["derive"] }

[[bin]]
name = "wtm"
path = "src/main.rs"
